--- a/css/section.css
+++ b/css/section.css
@@ -36,6 +36,12 @@
   font-size: 31px;
 }
 
+.section__anchor {
+  text-decoration: none;
+  color: black;
+  text-decoration: none;
+}
+
 @media (max-width: 767px) {
   .section__header {
     font-size: 25px;
@@ -67,7 +73,6 @@
 }
 
 .section__image {
-  width: 82%;
   max-width: 306px;
   max-height: 306px;
   border-radius: 50%;
