--- a/css/section.css
+++ b/css/section.css
@@ -1,7 +1,7 @@
 .section {
   font-size: 18px;
   color: #555;
-  padding: 100px 0;
+  padding: 30px 0 30px 0;
 }
 
 @media (max-width: 767px) {
@@ -42,6 +42,11 @@
   text-decoration: none;
 }
 
+.section_anchor_double {
+
+  height: 100%;
+}
+
 @media (max-width: 767px) {
   .section__header {
     font-size: 25px;
@@ -53,21 +58,21 @@
   display: grid;
   grid-gap: 30px;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -ms-grid-columns: 40% 1fr;
-      grid-template-columns: 40% 1fr;
+  grid-template-columns: 40% 1fr;
 }
 
 .section__inner--mirror {
   -ms-grid-columns: 1fr 40%;
-      grid-template-columns: 1fr 40%;
+  grid-template-columns: 1fr 40%;
 }
 
 @media (max-width: 767px) {
   .section__inner {
     -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
     grid-gap: unset;
   }
 }
@@ -83,17 +88,17 @@
     padding: 20px;
     height: 200px;
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
     -webkit-box-ordinal-group: 0;
-        -ms-flex-order: -1;
-            order: -1;
+    -ms-flex-order: -1;
+    order: -1;
   }
 }
 
 .section__text {
   -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
   padding: 0 30px;
 }
 
@@ -102,8 +107,8 @@
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   margin-top: 20px;
 }
 
@@ -121,6 +126,7 @@
 
 .section__more-links-link:hover {
   -webkit-filter: brightness(125%);
-          filter: brightness(125%);
+  filter: brightness(125%);
 }
+
 /*# sourceMappingURL=section.css.map */
