--- a/css/testimonials.css
+++ b/css/testimonials.css
@@ -1,10 +1,10 @@
 .testimonials {
   margin-top: 20px;
-  /* display: -ms-grid;
+  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
-  grid-gap: 30px; */
+  -ms-grid-columns: (1fr)[1];
+      grid-template-columns: repeat(1, 1fr);
+  grid-gap: 30px;
   text-decoration: none;
 }
 
